--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "gajus/dindent",
-	"version": "2.0.2",
-	"description": "HTML indentation library for development and testing.",
+	"name": "SpaceGazebo/dindent",
+	"version": "0.1",
+	"description": "HTML indentation library for cleaner development code and to reduce merge conflict impact.",
 	"keywords": ["HTML", "indent", "format"],
-	"homepage": "https://github.com/gajus/dindent",
+	"homepage": "https://github.com/SpaceGazebo/dindent",
 	"type": "library",
 	"license": "BSD-3-Clause",
 	"authors": [
@@ -13,8 +13,10 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3"
-	},
+		"php": ">=5.4"
+	},"replace":{
+                "gajus/dindent":"2.0.*"
+    	}
 	"require-dev": {
 	    "satooshi/php-coveralls": "dev-master"
 	},
